--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Проект лазер</title>
+    <title>Проект стартап</title>
 </head>
 <body>
     
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-center">Лаборатория диагностики углеродных материалов и спиново-оптических<br> явлений в широкозонных полупроводниках</h1>
+                    <h1 class="text-center">Устройство для измерения и картирования <br> оптической анизотропии в алмазных пластинах</h1>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
                     <h5 class="text-center">Научно-исследовательских центров</h5>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <h5 class="text-center">Лаборатории по выращиванию алмазов</h5>
+                    <h5 class="text-center">Лабораторий по выращиванию алмазов</h5>
                 </div> 
                 <div class="col-md-6 col-sm-12">
                     <h5 class="text-center">Горнодобывающей промышленности</h5>
@@ -87,7 +87,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <a href="https://vk.com/club207467661" class="btn btn-lg text-uppercase btn-itd">Вступить</a>
+                    <a href="#" class="btn btn-lg text-uppercase btn-itd">Заказать</a>
                 </div>
             </div>
         </div>
