--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <title>Проект стартап</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">ЛДУМИСОЯШП</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            </div>
+        </div>
+    </nav>
     <header>
         <div class="container">
             <div class="row">
@@ -31,32 +41,32 @@
             </div>
             <div class="row">
                 <div class="col-xl-4 col-md-6 col-sm-12">
-                    <div class="itd_circle"><i class="icon-diamond"></i></div>
+                    <a href="field_of_activity.html"> <div class="itd_circle"><i class="icon-diamond"></i></div></a>
                     <h5 class="text-center">Область деятельности</h5>
                     <div class="line"></div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12">
-                    <div class="itd_circle"><i class="icon-check"></i></div>
+                    <a href="production.html"> <div class="itd_circle"><i class="icon-check"></i></div></a>
                     <h5 class="text-center">Продукция</h5>
                     <div class="line"></div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12">
-                    <div class="itd_circle"><i class="icon-rouble"></i></div>
+                    <a href="vacancies.html"><div class="itd_circle"><i class="icon-rouble"></i></div></a>
                     <h5 class="text-center">Вакансии</h5>
                     <div class="line"></div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12">
-                    <div class="itd_circle"><i class="icon-user-plus"></i></div>
+                    <a href="ingeniers_crew.html"><div class="itd_circle"><i class="icon-user-plus"></i></div></a>
                     <h5 class="text-center">Команда разработчиков</h5>
                     <div class="line"></div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12">
-                    <div class="itd_circle"><i class="icon-list-numbered"></i></div>
+                    <a href="offered_services.html"><div class="itd_circle"><i class="icon-list-numbered"></i></div></a>
                     <h5 class="text-center">Предлагаемые услуги</h5>
                     <div class="line"></div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12">
-                    <div class="itd_circle"><i class="icon-video"></i></div>
+                    <a href="about_us.html"><div class="itd_circle"><i class="icon-video"></i></div></a>
                     <h5 class="text-center">О нас</h5>
                     <div class="line"></div>
                 </div>
