--- a/field_of_activity.html
+++ b/field_of_activity.html
@@ -31,9 +31,22 @@
             </div>
         </div>
     </header>
+
     <section>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center text uppercase color2 mb-5">Мемчик</h2>
+                </div>
+            </div>
+            <div class="row align-items-center mb-5">
+                <div class="col-12 text-center">
+                    <img src="img/mem.jpg" alt="kek" class="img-fluid">
+                </div>
+            </div>
+        </div>
     </section>
+
     <footer id="footer">
         <div class="container">
             <div class="row">
