--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Проект стартап</title>
+    <title>ЛДУМиСОЯШП</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ЛДУМИСОЯШП</a>
+            <img src="img/Lab_logo.png" alt="kek" class="img-fluid" width="60" height="60">
+            <a class="navbar-brand" href="index.html">ЛДУМиСОЯШП</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-center">Устройство для измерения и картирования <br> оптической анизотропии в алмазных пластинах</h1>
+                    <h1 class="text-center">Лабораторния диагностики углеродных материалов<br>и спиново-оптических явлений в широкозонных полупроводниках</h1>
                 </div>
             </div>
         </div>
@@ -36,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center text-uppercase color1 mb-5">О компании</h2>
+                    <h2 class="text-center text-uppercase color1 mb-5">О лаборатории</h2>
                 </div>
             </div>
             <div class="row">
@@ -57,7 +58,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12">
                     <a href="ingeniers_crew.html"><div class="itd_circle"><i class="icon-user-plus"></i></div></a>
-                    <h5 class="text-center">Команда разработчиков</h5>
+                    <h5 class="text-center">Сотрудники лаборатории</h5>
                     <div class="line"></div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12">
