--- a/field_of_activity.html
+++ b/field_of_activity.html
@@ -13,7 +13,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ЛДУМИСОЯШП</a>
+            <img src="img/Lab_logo.png" alt="kek" class="img-fluid" width="50" height="50">
+            <a class="navbar-brand" href="index.html">ЛДУМиСОЯШП</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
